--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -5,6 +5,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+    <!-- Your content -->
+
     <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
@@ -15,6 +17,8 @@
                 android:scaleType="centerCrop"
                 android:src="@drawable/p1"/>
     </LinearLayout>
+
+    <!-- Draggable Content -->
 
     <FrameLayout
             android:layout_width="130dp"
